<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/dashboard_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="36dp"
                android:text="Dashboard"
                android:textColor="#F88379"
                android:textSize="32dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mood_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="How are you feeling today?"
                android:textColor="#ffafae"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/add_mood_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#ffdfde"
                android:letterSpacing="0.8"
                android:text="😠 😕 🤢 😨 😄 😔 😳 😯" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/activity_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Recent Activity"
                    android:textColor="#808080"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ListView
                android:id="@+id/activity_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>