...
        <action
            android:id="@+id/action_loginFragment_to_passwordReset1Fragment"
            app:destination="@id/passwordReset1Fragment" />
    </fragment>

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.example.unemployedavengers.Notifications"
        android:label="notificationsFragment"
        tools:layout="@layout/notifications" />

    <fragment
        android:id="@+id/settingsFragment"
...
        <action
            android:id="@+id/action_passwordReset2Fragment_to_passwordReset1Fragment"
            app:destination="@id/passwordReset1Fragment" />
    </fragment>

    <fragment
        android:id="@+id/friendsHistoryFragment"
        android:name="com.example.unemployedavengers.friendSection.FriendsHistory"
        android:label="friendsHistory"
        tools:layout="@layout/friends_history">
        <action
            android:id="@+id/action_friendsHistoryFragment_to_userSearchFragment"
            app:destination="@id/userSearch" />
...
